[package]
name = "near-store"
version = "0.0.0"
license = "MIT OR Apache-2.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.56.0"
edition = "2021"

[dependencies]
byteorder = "1.2"
bytesize = "1.1"
elastic-array = "0.11"
rand = "0.7"
strum = { version = "0.20", features = ["derive"] }
tracing = "0.1"
borsh = "0.9"
lru = "0.7.2"

near-crypto = { path = "../crypto" }
near-primitives = { path = "../primitives" }
near-experimental-storage = { path = "../experimental-storage" }

[dev-dependencies]
tempfile = "3"
bencher = "0.1.5"

[[bench]]
name = "trie_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false

[features]
default = []
no_cache = []
test_features = []
protocol_feature_chunk_only_producers = []
nightly_protocol = []
nightly_protocol_features = ["nightly_protocol", "protocol_feature_chunk_only_producers"]
