[package]
name = "chainsync-loadtest"
version = "0.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.56.0"
edition = "2021"

[[bin]]
name = "fetch_chain"
path = "src/bin/fetch_chain.rs"

[dependencies]
clap = "=3.0.0-beta.2"
actix = "=0.11.0-beta.2"
parking_lot = "0.11.2"
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
openssl-probe = "0.1.4"
futures = "0.3"
anyhow = "1.0.55"
rand = "0.8"
dirs = "3"
tokio = "1.16.1"
log = "0.4"
hyper = { version = "0.14", features = ["client"] }
serde_json = "1"

bytes = "1"
tempfile = "3"
tokio-util = { version = "0.6", features = ["codec"] }
bytesize = "1.1"
borsh = { version = "0.9", features = ["rc"] }
lru = "0.7.2"
strum = { version = "0.20", features = ["derive"] }
tokio-stream = { version = "0.1.2", features = ["net"] }
conqueue = "0.4.0"
itertools = "0.10.3"
once_cell = "1.5.2"
delay-detector = { path = "../../tools/delay_detector" }
near-metrics = { path = "../../core/metrics" }
near-performance-metrics = { path = "../../utils/near-performance-metrics" }
near-performance-metrics-macros = { path = "../../utils/near-performance-metrics-macros" }
near-rate-limiter = { path = "../../utils/near-rate-limiter" }
near-jsonrpc-primitives = { path = "../../chain/jsonrpc-primitives" }

near-chain-configs = { path = "../../core/chain-configs" }
near-crypto = { path = "../../core/crypto" }
near-primitives = { path = "../../core/primitives" }
near-store = { path = "../../core/store" }
nearcore = { path = "../../nearcore" }
# near-network = { path = "../../chain/network" }
near-network-primitives = { path = "../../chain/network-primitives" }

[features]
[package.metadata.workspaces]
independent = true
