[package]
edition = "2018"
name = "near-rate-limiter"
version = "0.0.0"
publish = false

[dependencies]
bytes = "1.0.0"
futures-core = "0.3.0"
pin-project-lite = "0.2.0"
tokio = { version = "1.0.0", features = ["sync"] }
tokio-util = { version = "0.6.9", features = ["io", "codec"] }
tracing = "0.1.13"
